# scoremill

./: .gitignore  LICENSE  MANIFEST.in  README.md  jukebox.py  mcp_server.py  pyproject.toml  scoremill.py
.github/workflows/: tests.yml
examples/: blues_416_megabytes.py  dynamo_rag.py  invention_two_processes.py  minuet_small_computer.py  nickelodeon.py  orrery.py  player_piano_studies.py  saltarello_alla_chico.py  silver_dollar_saloon.py
tests/: test_scoremill.py
