[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scoremill"
version = "0.2.0"
description = "Text-notation MIDI composition library designed for language-model agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["mido>=1.3"]
keywords = ["midi", "music", "composition", "notation", "agents", "llm"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]

[project.optional-dependencies]
play = ["python-rtmidi>=1.5"]

[tool.setuptools]
py-modules = ["scoremill"]
